# solana-program-library

./: .gitignore  .release-it.json  .tool-versions  Anchor.toml  LICENSE  README.md  Taskfile.yaml  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
demo-app/: package.json
demo-app/context/: solana-wallet.tsx
demo-app/pages/: index.tsx
demo-app/pages/admin/: index.tsx
demo-app/pages/demo/: index.tsx
docs/: ka-ching.md
migrations/: deploy.ts
programs/kaching-cash-register/: Cargo.toml
programs/kaching-cash-register/src/: bloomfilter.rs  create_cash_register.rs  create_cashbox.rs  errors.rs  lib.rs  settle_order_payment.rs
scripts/: deploy.sh  verify-deployed.sh
sdk/ts/: index.ts  ix.ts  serializer.ts  with-anchor.ts
sdk/ts/ka-ching/: index.ts  with-anchor.ts
sdk/ts/v1/: create-cash-register.ts  create-consumed-orders-account.ts  create-token-cashbox.ts  index.ts  program.ts  settle-order-payment.ts
tests/: anchor.setup.ts
tests/kaching-cash-register/: create-cash-register.spec.ts  create-cash-registry.spec.ts  create-cashbox.spec.ts  order-id-serialization.spec.ts  order-validations.spec.ts  sanity.spec.ts  settle-order-payment.spec.ts  sigverify-ix.spec.ts  test-utils.ts
tests/kaching-cash-register/create-cash-register/: account.spec.ts  consumedorders-change-owner-attack.spec.ts  consumedorders-reuse-attack.spec.ts  consumedorders-small-account.spec.ts  id-validations.spec.ts  sanity.spec.ts  (+1 more)
tests/utils/: cash-register.ts  cash_register.ts  cashbox.ts  general.ts  settle-payment.ts  solana.ts  testing.ts  token-cashbox.ts
(+34 files in other folders)
