[package]
name = "kaching-cash-register"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kaching_cash_register"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
solana-program = "1.10.31"
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"
bs58 = "0.4.0"
bloomfilter = "1.0.9"
getrandom = { version = "0.2.2", features = ["custom"] }